<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


<LinearLayout
	android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_weight="1" android:orientation="horizontal" android:layout_height="wrap_content">


<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/buttonSelect" android:text="@string/selectTable" android:layout_weight="1"></Button>

<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/buttonInsert" android:text="@string/insertTable" android:layout_weight="1"></Button>
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/buttonReset" android:text="@string/resetTable" android:layout_weight="1"></Button>

</LinearLayout>

<TextView android:id="@+id/out_text" android:layout_height="wrap_content" android:text="@+id/TextView01" android:layout_width="fill_parent" android:layout_weight="3" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|clip_vertical|clip_horizontal"></TextView>


</LinearLayout>
